--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "1.6.9",
-    "angular-material": "^1.1.8"
+    "angular-material": "^1.1.8",
+    "angular-moment": "^1.2.0"
   }
 }
